# starhash

./: .gitignore  CMakeLists.txt  README.md
data/: centroiding.yaml  config.yaml  configuration.xml  homomorphic.py  image_testing.ipynb  solver.yaml
docker/: Dockerfile  docker-compose.yml  run_docker
include/: ProgressBar.hpp  StarCatalog.hpp  StarCatalogGenerator.hpp  StarSolver.hpp  Utilities.hpp  eigen_mods.hpp  iterators.hpp  solver.hpp  starhash.hpp
lib/: attitude_determination.py  centroiding.py  image_processing.py  noise.py  perf_utils.py  star_solver.py  stellar_utils.py  transform_utils.py
scripts/: astrometry.py  att_det_test.py  centroiding.py  centroiding.yaml  explore_hdf5_output.py  generate_catalog.py  generate_gaia.py  generate_hipparcos.py  generate_hipparcos_slow.py  generate_primes.py  generate_sky.py  get_earth_ssb.py  requirements.txt  rotation.py  stellar_utils.py
src/: StarCatalog.cpp  StarCatalogGenerator.cpp  StarSolver.cpp  Utilities.cpp  run.cpp  solver.cpp  starhash.cpp
stellarscript/: README.md  client.py  display_centers.py  server.py  simulation.py  stellar_config.yaml  stellarium.py  stellarium_actions.json
stellarscript/results/: StarMgr.json  actions.json  objecttypes.json  properties.json  url_view_skyculture.html  view.json
